Trying to see if im commiting correctly

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--  POP-UP MODAL  -->
     <div id="popUp-Modal" class="modal">
       <div id="popUp-ModalContent">
-        <h1 class="centerText"><u>WELCOME !</u></h1>
+        <h1 class="centerText"><u>WELCOME ! DAIVARAS</u></h1>
         <p id="popUp-Modal-Paragraph">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
           ultricies scelerisque porta. Vestibulum eget quam tempus, eleifend mi
