Changed spacing around navbar and 'card'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--  POP-UP MODAL  -->
     <div id="popUp-Modal" class="modal">
       <div id="popUp-ModalContent">
-        <h1 class="centerText"><u>WELCOME ! DAIVARAS</u></h1>
+        <h1 class="centerText"><u>WELCOME !</u></h1>
         <p id="popUp-Modal-Paragraph">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
           ultricies scelerisque porta. Vestibulum eget quam tempus, eleifend mi
@@ -59,16 +59,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
+            <li class="nav-item mx-5">
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-5">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-5">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-5">
               <a class="nav-link" href="#">Link</a>
             </li>
           </ul>
