--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootrstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
-
+    <!-- Required Core Stylesheet -->
+    <link
+      rel="stylesheet"
+      href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
+    />
+    <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-
     <title>Vanilla DaivarasDev</title>
   </head>
   <body>
@@ -79,15 +84,33 @@
     <!-- PROJECTS CARD  -->
     <div class="card">
       <div class="card-header">Featured</div>
-      <div class="card-body"></div>
-    </div>
-    <!-- SCRIPT TAG -->
-    <script src="script.js"></script>
+      <div class="card-body">
+        <div class="glide">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">0</li>
+              <li class="glide__slide">1</li>
+              <li class="glide__slide">2</li>
+            </ul>
+          </div>
 
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- MAIN SCRIPT -->
+    <script src="script.js"></script>
+    <!-- BOOTRSTRAP SCRIPT -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <!-- GLIDE SCRIPT  -->
+    <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
   </body>
 </html>
