--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@
         </div>
       </div>
     </div>
+    <!-- TECHNOLOGIES USED CARD -->
+    <section class="technologiesSection">
+      <h1 class="technologiesText centerText">
+        What did I learn/use for this ?
+      </h1>
+      <div class="flexContainer">
+        <div class="flexItem centerText">
+          <img class="flexImage" src="images/github.png" alt="" />
+        </div>
+        <div class="flexItem centerText">
+          <img class="flexImage" src="images/html.png" alt="" />
+        </div>
+        <div class="flexItem centerText">
+          <img class="flexImage" src="images/css3.png" alt="" />
+        </div>
+        <div class="flexItem centerText">
+          <img class="flexImage" src="images/javascript.png" alt="" />
+        </div>
+        <div class="flexItem centerText">
+          <img class="flexImage" src="images/npm.png" alt="" />
+        </div>
+      </div>
+    </section>
+
     <!-- MAIN SCRIPT -->
     <script src="script.js"></script>
     <!-- BOOTRSTRAP SCRIPT -->
